--- a/README.mediawiki
+++ b/README.mediawiki
@@ -12,7 +12,7 @@ Those proposing changes should consider that ultimately consent may rest with th
 !Title
 !Owner
 !Type
-!Status
+!Acceptance
 |- style="background-color: #ffcfcf"
 | [[tvs-0001.mediawiki|1]]
 |
@@ -20,3 +20,4 @@ Those proposing changes should consider that ultimately consent may rest with th
 | -
 | Holy
 | Axiomatic
+|}
