--- a/tvs-0032.mediawiki
+++ b/tvs-0032.mediawiki
@@ -9,3 +9,13 @@ The original true true vision Bitcoin scaling roadmap currently includes
 1. No chains left behind : All Bitcoin Cash abandonned forks shall be used as sub layers for scaling.
 
 1st protocol extension, Sub Layer -1, will be added when Median Time Past reaches timestamp 1526400000 (May 15, 2018), and a subsequent layer, Sub Layer -2, for 6-months later when Median Time Past reaches 1542300000 (November 15, 2018).
+
+
+
+
+
+
+
+
+<img src="bitcoinclashic-1.jpg" alt="Scaling">
+
