--- a/README.mediawiki
+++ b/README.mediawiki
@@ -21,6 +21,14 @@ Those proposing changes should consider that ultimately consent may rest with th
 | Holy
 | Axiomatic
 |- style="background-color: #ffcfcf"
+| [[tvs-0032.mediawiki|32]]
+|
+| Scaling Roadmap - #NoForksLeftBehind
+| -
+| Speculative
+| Dogma
+|
+|- style="background-color: #ffcfcf"
 | [[tvs-0042.mediawiki|42]]
 |
 | Proof of Timeshare Revelations
